syntax = 'proto3';

package bank_app;

import "google/protobuf/empty.proto";

option java_multiple_files = true;
option java_package = "org.example.grpc.bank_app";

message BankAccountRequest{
  int32 accountId = 1;
}

message AccountBalance{
  float balance = 1;
  string owner_name = 2;
  string currency = 3;
}

message AllAccounts{
  repeated AccountBalance accounts = 1;
}

message WithdrawRequest {
  int32 accountId  = 1;
  float amount = 2;
  int32 partition  = 3;
}

message WithdrawResponse{
  int32 amount = 1;
  int32 order = 2;
}

service BankService{
  rpc GetAccountBalance(BankAccountRequest) returns (AccountBalance);
  rpc GetAccounts(google.protobuf.Empty) returns (AllAccounts);
  rpc Withdraw(WithdrawRequest) returns (stream WithdrawResponse);
}
